scroll overflow fix

--- a/main.css
+++ b/main.css
@@ -480,7 +480,7 @@ span.step {
   .scroll-down img {
     margin-top: 2em;
   }
-  .scroll-down img.slide4 {
+  img.slide3 {
     margin-top: 0;
   }
 }
